Add test file to check routing from future landing page

--- a/minigames/aim_trainer/test.html
+++ b/minigames/aim_trainer/test.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Over</title>
+    <title>Tracking</title>
 </head>
 
 <body style="background-color: black; color: white;">
-    <h1>Game Over</h1>
-    <p>Thanks for playing!</p>
+    <h1>Tracking</h1>
+    <p>routing successful!</p>
 </body>
 
 </html>
