Add functionality for super basic cursor tracking gamemode

--- a/minigames/aim_trainer/landing_page.html
+++ b/minigames/aim_trainer/landing_page.html
@@ -62,7 +62,8 @@
     <div class="container">
         <h1>Select Game Mode</h1>
         <button class="mode-btn aim-mode" onclick="location.href='aim_trainer.html'">Regular Aim Trainer</button>
-        <button class="mode-btn track-mode" onclick="location.href='test.html'">Cursor Tracking Mode</button>
+        <button class="mode-btn track-mode" onclick="location.href='tracking/cursor_tracking.html'">Cursor Tracking
+            Mode</button>
     </div>
 </body>
 
