Remove non-needed code

--- a/minigames/aim_trainer/tracking/cursor_tracking.html
+++ b/minigames/aim_trainer/tracking/cursor_tracking.html
@@ -12,9 +12,9 @@
     <h1>Cursor Tracking Mode</h1>
     <p>Move your cursor along the line as accurately as possible!</p>
     <div id="game-container">
-        <canvas id="gameCanvas" width="800" height="400"></canvas>
+        <canvas id="gameCanvas" width=dw height=dh></canvas>
     </div>
-    <p id="stats">Accuracy: 0% | Speed: 0 px/sec</p>
+    <!-- <p id="stats">Accuracy: 0% | Speed: 0 px/sec</p> -->
 
     <script src="cursor_tracking.js"></script>
 </body>
