Remove redundant code

--- a/todo_webapp/index.html
+++ b/todo_webapp/index.html
@@ -5,36 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            max-width: 400px;
-        }
-
-        .task {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-bottom: 5px;
-            background-color: #f9f9f9;
-        }
-
-        .task button {
-            background-color: red;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            padding: 5px;
-            cursor: pointer;
-        }
-
-        .task button:hover {
-            background-color: darkred;
-        }
-    </style>
+    <link rel="stylesheet" href="todo.css" />
 </head>
 
 <body>
@@ -45,62 +16,7 @@
     </form>
     <div id="task-list"></div>
 
-    <script>
-        const taskForm = document.getElementById('task-form');
-        const taskInput = document.getElementById('task-input');
-        const taskList = document.getElementById('task-list');
-
-        // Load tasks from local storage on page load
-        const loadTasks = () => {
-            const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-            tasks.forEach(addTaskToDOM);
-        };
-
-        // Save tasks to local storage
-        const saveTasks = (tasks) => {
-            localStorage.setItem('tasks', JSON.stringify(tasks));
-        };
-
-        // Add a task to the DOM
-        const addTaskToDOM = (task) => {
-            const taskDiv = document.createElement('div');
-            taskDiv.classList.add('task');
-            taskDiv.innerHTML = `
-                <span>${task}</span>
-                <button class="delete-btn">Delete</button>
-            `;
-            taskList.appendChild(taskDiv);
-
-            // Add delete functionality
-            taskDiv.querySelector('.delete-btn').addEventListener('click', () => {
-                removeTask(task, taskDiv);
-            });
-        };
-
-        // Remove a task from the DOM and local storage
-        const removeTask = (task, taskElement) => {
-            const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-            const updatedTasks = tasks.filter(t => t !== task);
-            saveTasks(updatedTasks);
-            taskElement.remove();
-        };
-
-        // Handle form submission
-        taskForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const task = taskInput.value.trim();
-            if (task) {
-                addTaskToDOM(task);
-                const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-                tasks.push(task);
-                saveTasks(tasks);
-                taskInput.value = '';
-            }
-        });
-
-        // Initialize the app
-        loadTasks();
-    </script>
+    <script scr="todo.js"></script>
 </body>
 
 </html>
