Update file path for todo webapp

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
   </div> -->
   <div>
-    <a href="todo_webapp/index.html" class="game-link">todo list</a>
+    <a href="todo_webapp/todo.html" class="game-link">todo list</a>
   </div>
 
   <script>
