--- a/todo_webapp/todo.html
+++ b/todo_webapp/todo.html
@@ -16,7 +16,7 @@
     </form>
     <div id="task-list"></div>
 
-    <script scr="todo.js"></script>
+    <script src="todo.js"></script>
 </body>
 
 </html>
