Fix some minor game logic for better RT measurements and presentation

--- a/minigames/aim_trainer/gameover.html
+++ b/minigames/aim_trainer/gameover.html
@@ -75,7 +75,7 @@
             document.getElementById('finalScore').innerText = `Final Score: ${localStorage.getItem("score")}`;
             document.getElementById('accuracy').innerText = `Accuracy: ${localStorage.getItem("accuracy")}%`;
             document.getElementById('totalMisses').innerText = `Total Misses: ${localStorage.getItem("misses")}`;
-            document.getElementById('reactionTime').innerText = `Average Reaction Time: ${localStorage.getItem("reactionTime")}`;
+            document.getElementById('reactionTime').innerText = `Your Reaction Time is ${localStorage.getItem("reactionTime")}`;
             document.getElementById('gameOverScreen').style.display = 'block';
             console.log("here");
 
