Add riddles minigame to home page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   <div>
     <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
     <a href="minigames/percentage_calculation/index.html" class="game-link">percentage practice</a>
+    <a href="minigames/logic_games/index.html" class="game-link">riddles</a>
   </div>
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
