--- a/minigames/logic_games/index.html
+++ b/minigames/logic_games/index.html
@@ -14,53 +14,12 @@
     <p id="riddle">Loading...</p>
     <!-- <input type="text" id="answerInput" placeholder="Your answer"> -->
     <div>
-        <button id="ans-btn" onclick="checkAnswer()">Check Answer</button>
+        <button id="ans-btn" onclick="checkAnswer()">Reveal Answer</button>
         <button id="q-btn" onclick="nextRiddle()">Next</button>
     </div>
     <p id="feedback"></p>
 
-    <script>
-        const questionsUrl = 'https://raw.githubusercontent.com/mattwydra/projects/main/minigames/logic_games/questions.txt';
-        const answersUrl = 'https://raw.githubusercontent.com/mattwydra/projects/main/minigames/logic_games/answers.txt';
-
-        let riddles = [];
-        let answers = [];
-        let currentIndex = 0;
-
-        async function loadRiddles() {
-            const qResponse = await fetch(questionsUrl);
-            const aResponse = await fetch(answersUrl);
-            riddles = (await qResponse.text()).split('\n');
-            answers = (await aResponse.text()).split('\n');
-            currentIndex = Math.floor(Math.random() * riddles.length);
-            document.getElementById('riddle').innerText = riddles[currentIndex];
-        }
-
-        function checkAnswer() {
-            document.getElementById('feedback').innerText = answers[currentIndex];
-        }
-
-        function nextRiddle() {
-            document.getElementById('feedback').innerHTML = "";
-            currentIndex = Math.floor(Math.random() * riddles.length);
-            document.getElementById('riddle').innerText = riddles[currentIndex];
-            document.getElementById('feedback').innerText = '';
-        }
-
-        loadRiddles();
-        const themeToggle = document.getElementById("themeToggle");
-
-        themeToggle.addEventListener("click", () => {
-            const body = document.body;
-            const currentTheme = body.getAttribute("data-theme");
-
-            if (currentTheme === "light") {
-                body.setAttribute("data-theme", "dark");
-            } else {
-                body.setAttribute("data-theme", "light");
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
