--- a/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
+++ b/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
@@ -11,7 +11,7 @@
 
 <body>
   <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
-  <h1>gambare gambare</h1>
+  <h1>the numbers, mason</h1>
   <!-- <div>
       <button id="start-button">start</button>
     </div> -->
