Reference new global styling for darkmode

--- a/minigames/cookie_clicker/cookie_clicker.html
+++ b/minigames/cookie_clicker/cookie_clicker.html
@@ -8,6 +8,7 @@
   <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
 
   <link rel="stylesheet" href="cookie_clicker.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
