--- a/minigames/pixel_escape/pixel_escape.html
+++ b/minigames/pixel_escape/pixel_escape.html
@@ -15,6 +15,7 @@
   <script type="module" src="working.js"></script>
 
   <link rel="stylesheet" href="pixel_escape.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </body>
 
 </html>
