--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Comp Sci Lingo Practice</title>
     <link rel="stylesheet" href="cs_lingo.css" />
+    <link rel="stylesheet" href="/styles/darkmode.css" />
     <style>
         body {
             font-family: Arial, sans-serif;
