--- a/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.html
+++ b/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>special characters practice</title>
   <link rel="stylesheet" href="special_chars.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
