--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       color: black;
     }
   </style>
-  <link rel="stylesheet" href="styles/darkmode.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
