--- a/minigames/aim_trainer/aim_trainer.html
+++ b/minigames/aim_trainer/aim_trainer.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.5" />
   <title>Aim Trainer</title>
   <link rel="stylesheet" href="aim_trainer.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 
 </head>
 
