--- a/minigames/count_clicker/index.html
+++ b/minigames/count_clicker/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>counter app</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles/darkmode.css" />
   </head>
   <body>
     <header>i am count counter!</header>
