--- a/minigames/cps/index.html
+++ b/minigames/cps/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>how clickly can you quick? wait...</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
