--- a/minigames/number_memory/index.html
+++ b/minigames/number_memory/index.html
@@ -7,6 +7,7 @@
   <title>Number Memorization Game</title>
 </head>
 <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="/styles/darkmode.css" />
 
 <body>
   <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
