--- a/minigames/rt_trainer/index.html
+++ b/minigames/rt_trainer/index.html
@@ -23,6 +23,7 @@
 
   <script src="script.js"></script>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </body>
 
 </html>
