--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>comp sci lingo practice</title>
   <link rel="stylesheet" href="cs_lingo.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
