--- a/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
+++ b/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>numbers practice</title>
   <link rel="stylesheet" href="numbers.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
