--- a/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
+++ b/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>uncommon words practice</title>
   <link rel="stylesheet" href="uncommon_words.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
 </head>
 
 <body>
