--- a/minigames/aim_trainer/landing_page.html
+++ b/minigames/aim_trainer/landing_page.html
@@ -5,57 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aim Trainer - Mode Selection</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #121212;
-            color: white;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .container {
-            background: #1e1e1e;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-        }
-
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        .mode-btn {
-            display: block;
-            width: 200px;
-            padding: 15px;
-            margin: 10px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .mode-btn:hover {
-            opacity: 0.8;
-        }
-
-        .aim-mode {
-            background: #007bff;
-            color: white;
-        }
-
-        .track-mode {
-            background: #28a745;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="landing_page.css" />
 </head>
 
 <body>
