--- a/highscore_database/dashboard.html
+++ b/highscore_database/dashboard.html
@@ -226,7 +226,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-    <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+    <script src="dashboard.js"></script>
 </body>
 
 </html>
