--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   <div>
     <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
     <a href="minigames/percentage_calculation/index.html" class="game-link">percentage practice</a>
+    <a href="minigames/memory_match/index.html" class="game-link">memory match</a>
   </div>
   <!--   <div>
     <a href="highscore_database/templates/index.html" class="game-link">test database management</a>
