Add placeholder for pattern recognition

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
   </div>
   <a href="minigames/logic_games/index.html" class="game-link">riddles</a>
+  <!-- <a href="minigames/pattern_recognition/index.html" class="game-link">pattern recognition</a> -->
   <div>
     <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
   </div>
