--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   <div>
 
   </div>
+  <a href="minigames/logic_games/pattern_recognition/numbers/index.html" class="game-link">riddles</a>
   <a href="minigames/logic_games/riddles/index.html" class="game-link">riddles</a>
   <!-- <a href="minigames/logic_games/pattern_recognition/index.html" class="game-link">pattern recognition</a> -->
   <div>
