Add hyperlink for new game

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
   <a href="minigames/logic_games/pattern_recognition/numbers/index.html" class="game-link">number logic</a>
   <a href="minigames/logic_games/riddles/index.html" class="game-link">riddles</a>
-  <!-- <a href="minigames/logic_games/pattern_recognition/grids/index.html" class="game-link">grid patterns</a> -->
+  <a href="minigames/logic_games/pattern_recognition/grids/index.html" class="game-link">grid patterns</a>
   <!-- <a href="minigames/logic_games/pattern_recognition/index.html" class="game-link">pattern recognition</a> -->
   <div>
     <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
