--- a/minigames/logic_games/pattern_recognition/grids/index.html
+++ b/minigames/logic_games/pattern_recognition/grids/index.html
@@ -5,184 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Pattern Puzzle</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f7fa;
-            color: #333;
-        }
-
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-            margin-bottom: 30px;
-        }
-
-        .game-container {
-            background-color: white;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .instructions {
-            background-color: #f8f9fa;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            border-left: 4px solid #3498db;
-        }
-
-        .level-display {
-            text-align: center;
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .score-display {
-            text-align: center;
-            font-size: 16px;
-            margin-bottom: 20px;
-        }
-
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            margin: 0 auto;
-            max-width: 400px;
-        }
-
-        .grid-cell {
-            aspect-ratio: 1/1;
-            background-color: #ecf0f1;
-            border-radius: 5px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: 24px;
-            user-select: none;
-        }
-
-        .grid-cell.active {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .grid-cell.correct {
-            background-color: #2ecc71;
-            color: white;
-        }
-
-        .grid-cell.incorrect {
-            background-color: #e74c3c;
-            color: white;
-        }
-
-        .grid-cell.solution {
-            background-color: #f39c12;
-            color: white;
-        }
-
-        .bottom-controls {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            color: white;
-        }
-
-        .submit-btn {
-            background-color: #2ecc71;
-        }
-
-        .submit-btn:hover {
-            background-color: #27ae60;
-        }
-
-        .next-btn {
-            background-color: #9b59b6;
-            display: none;
-        }
-
-        .next-btn:hover {
-            background-color: #8e44ad;
-        }
-
-        .show-pattern-btn {
-            background-color: #3498db;
-        }
-
-        .show-pattern-btn:hover {
-            background-color: #2980b9;
-        }
-
-        .feedback {
-            text-align: center;
-            margin: 20px 0;
-            min-height: 24px;
-            font-weight: bold;
-        }
-
-        .correct-feedback {
-            color: #2ecc71;
-        }
-
-        .incorrect-feedback {
-            color: #e74c3c;
-        }
-
-        .timer {
-            text-align: center;
-            font-size: 18px;
-            margin-bottom: 15px;
-        }
-
-        .pattern-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            margin: 0 auto 20px;
-            max-width: 400px;
-        }
-
-        .pattern-cell {
-            aspect-ratio: 1/1;
-            border-radius: 5px;
-            background-color: #ecf0f1;
-        }
-
-        .pattern-cell.highlighted {
-            background-color: #3498db;
-        }
-
-        .start-btn {
-            background-color: #e67e22;
-        }
-
-        .start-btn:hover {
-            background-color: #d35400;
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
