--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     }
   </style>
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
