Test new styles link

--- a/minigames/aim_trainer/aim_trainer.html
+++ b/minigames/aim_trainer/aim_trainer.html
@@ -7,6 +7,7 @@
   <title>Aim Trainer</title>
   <link rel="stylesheet" href="aim_trainer.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 
 </head>
 
