--- a/minigames/cookie_clicker/cookie_clicker.html
+++ b/minigames/cookie_clicker/cookie_clicker.html
@@ -7,6 +7,7 @@
   <title>Cookie Clicker</title>
   <link rel="stylesheet" href="cookie_clicker.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body data-theme="dark">
