--- a/minigames/count_clicker/index.html
+++ b/minigames/count_clicker/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>counter app</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="/styles/darkmode.css" />
-  </head>
-  <body>
-    <header>i am count counter!</header>
-    <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
-    <div id="counter-container">
-      <h1 id="counter-display">0</h1>
-      <button id="increment-btn">increment</button>
-      <button id="decrement-btn">decrement</button>
-      <button id="clear-btn">clear</button>
-    </div>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>counter app</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
+</head>
+
+<body>
+  <header>i am count counter!</header>
+  <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
+  <div id="counter-container">
+    <h1 id="counter-display">0</h1>
+    <button id="increment-btn">increment</button>
+    <button id="decrement-btn">decrement</button>
+    <button id="clear-btn">clear</button>
+  </div>
+  <script src="script.js"></script>
+</body>
+
 </html>
