Add style link that works for github

--- a/minigames/cps/index.html
+++ b/minigames/cps/index.html
@@ -8,6 +8,7 @@
   <title>how clickly can you quick? wait...</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
