--- a/minigames/number_memory/index.html
+++ b/minigames/number_memory/index.html
@@ -8,6 +8,7 @@
 </head>
 <link rel="stylesheet" href="styles.css" />
 <link rel="stylesheet" href="/styles/darkmode.css" />
+<link rel="stylesheet" href="/projects/styles/darkmode.css" />
 
 <body>
   <div><button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button></div>
