--- a/minigames/pixel_escape/pixel_escape.html
+++ b/minigames/pixel_escape/pixel_escape.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="pixel_escape.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </body>
 <script>
   document.getElementById("home-btn").hidden = true;
