--- a/minigames/rt_trainer/index.html
+++ b/minigames/rt_trainer/index.html
@@ -24,6 +24,7 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </body>
 
 </html>
