--- a/minigames/typing_practice_hub/hub.html
+++ b/minigames/typing_practice_hub/hub.html
@@ -8,6 +8,7 @@
   <title>typing practice</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
