Add style link for typing minigames that works for github

--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/cs_lingo.html
@@ -8,6 +8,7 @@
   <title>comp sci lingo practice</title>
   <link rel="stylesheet" href="cs_lingo.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
