--- a/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
+++ b/minigames/typing_practice_hub/typing_practice/cs_lingo/index.html
@@ -8,6 +8,7 @@
     <title>Comp Sci Lingo Practice</title>
     <link rel="stylesheet" href="cs_lingo.css" />
     <link rel="stylesheet" href="/styles/darkmode.css" />
+    <link rel="stylesheet" href="/projects/styles/darkmode.css" />
     <style>
         body {
             font-family: Arial, sans-serif;
