--- a/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
+++ b/minigames/typing_practice_hub/typing_practice/numbers/numbers.html
@@ -8,6 +8,7 @@
   <title>numbers practice</title>
   <link rel="stylesheet" href="numbers.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
