--- a/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.html
+++ b/minigames/typing_practice_hub/typing_practice/special_characters/special_chars.html
@@ -8,6 +8,7 @@
   <title>special characters practice</title>
   <link rel="stylesheet" href="special_chars.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
