--- a/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
+++ b/minigames/typing_practice_hub/typing_practice/uncommon_words/uncommon_words.html
@@ -8,6 +8,7 @@
   <title>uncommon words practice</title>
   <link rel="stylesheet" href="uncommon_words.css" />
   <link rel="stylesheet" href="/styles/darkmode.css" />
+  <link rel="stylesheet" href="/projects/styles/darkmode.css" />
 </head>
 
 <body>
