Add link to util hub

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <!-- <a href="minigames/logic_games/pattern_recognition/index.html" class="game-link">pattern recognition</a> -->
   <div>
     <a href="discord_bots/hopecore_v1/browser_demo/index.html" class="game-link">hopecore demo</a>
+    <a href="utilities/index.html" class="game-link">utilities hub</a>
   </div>
   <!-- <div>
     <a href="discord_bots/test_img_gen/index.html" class="game-link">image generation demo</a>
