Create new element for auto gen

--- a/discord_bots/hopecore_v1/browser_demo/index.html
+++ b/discord_bots/hopecore_v1/browser_demo/index.html
@@ -22,6 +22,8 @@
       <a href="https://github.com/mattwydra/projects/blob/main/discord_bots/README.md">here</a>
     </div>
   </h2>
+
+  <a id="auto-gen" href="auto_gen/index.html">auto-gen</a>
   <script src="script.js" defer></script>
 </body>
 
