Remove unneeded elements

--- a/discord_bots/hopecore_v1/browser_demo/auto_gen/index.html
+++ b/discord_bots/hopecore_v1/browser_demo/auto_gen/index.html
@@ -10,19 +10,13 @@
 
 <body>
   <h2>
-    <div>welcome to my hopecore bot demo!</div>
+    <!-- <div>welcome to my hopecore bot demo!</div>
   </h2>
   <div>
     <button id="hopecore-link">generate hopecore</button>
-  </div>
-  <div id="result" style="margin-top: 50px"></div>
-  <h2>
-    <div>
-      for more info, click
-      <a href="https://github.com/mattwydra/projects/blob/main/discord_bots/README.md">here</a>
-    </div>
-  </h2>
-  <script src="script.js" defer></script>
+  </div> -->
+    <div id="result" style="margin-top: 50px"></div>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
